[package]
name = "sketchy-rs"
version = "0.5.0"
authors = ["esteinig <eikejoachim.steinig@my.jcu.edu.au>"]
description = "Rust core command line client for Sketchy"
documentation = "https://github.com/esteinig/sketchy"
homepage = "https://github.com/esteinig/sketchy"
repository = "https://github.com/esteinig/sketchy"
readme = "README.md"
keywords = ["sketchy", "nanopore", "metagenomics", "genotyping"]
categories = ["science"]
license = "MIT"
edition = "2018"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml",
]

[dependencies]
dirs = "1.0.5"
clap = "2.33.0"
cute = "0.3.0"
indicatif = "0.14.0"
serde_json = "1.0"
prettytable-rs = "0.8"