[package]
name = "sketchy-rs"
version = "0.6.0"
authors = ["esteinig <eike.steinig@unimelb.edu.au>"]
description = "Rust command line client for Sketchy"
documentation = "https://github.com/esteinig/sketchy"
homepage = "https://github.com/esteinig/sketchy"
repository = "https://github.com/esteinig/sketchy"
readme = "README.md"
keywords = ["sketchy", "nanopore", "gnt", "mash", "streaming"]
categories = ["science"]
license = "MIT"
edition = "2018"
include = [
    "**/*.rs",
    "src/data/*",
    "Cargo.toml"
]

[dependencies]
anyhow = "1.0"
structopt = "0.3"
clap = "2.33.0"
finch = "0.4.1"
rayon = "1.5.1"
needletail = "0.4.1"
thiserror = "1.0"
csv = "1.1"

[[bin]]
name = "sketchy"
path = "src/main.rs"